[FIX] web: fix footer wrapping in boxed layout
This commit fixes the footer for the boxed layout. A CSS property was preventing
the footer from wrapping, making it impossible to have a multi-line footer.

This was done in order to prevent TVA numbers or phone numbers from wrapping,
but this is obsolete as:

- other layouts don't do that
- users can use a line break to prevent the numbers from wrapping

opw-3658954

--- a/addons/web/static/src/legacy/scss/layout_boxed.scss
+++ b/addons/web/static/src/legacy/scss/layout_boxed.scss
@@ -23,7 +23,6 @@
 }
 .o_boxed_footer {
     margin-top: 200px;
-    white-space: nowrap;
     border-top: 3px solid $o-default-report-secondary-color;
     ul {
         margin: 4px 0;
